Added handlers for Ctrl+Home, Ctrl+End, Ctrl+0.
Updated Overview.html.
Version=1.4.9.0.

--- a/help/overview.html
+++ b/help/overview.html
@@ -29,6 +29,10 @@
 </pre>
 <p> An image manipulation program, such as Photoshop, is used to find the pixel values of points for which you know the latitude and longitude. These could be known latitude and longiture for some landmark or the corners of the map. A way to determine the corner values is by placing the image as an overlay in Google Earth (Add | Image Overlay) then adjusting it to match up with what is displayed in Google Earth. You can then put placemarks on the corners and get the latitude and longitude from the placemarks. Use Add Placemark and move the pushpin icon so the point is at each corner in turn.</p>
 <p>Note that the calibration is not limited to GPS latitude and longitude.  It can be calibrated to any 2D coordinate system, for example, the x and y axes of a graph. </p>
+<h2>Shortcut Keys</h2>
+<p>Ctrl+Home: Positions the image at the top left corner. </p>
+<p>Ctrl+End: Positions the image at the bottom right corner. </p>
+<p>Ctrl+0: Centers the image..</p>
 <h2>Menus</h2>
 <h3>File Menu </h3>
 <h4>Open Image</h4>
