Changed the logic for keystrokes and added more keystrokes.
Implemented Right, Left, Up, and Down.
Added plugin_customization.ini to build.

--- a/help/overview.html
+++ b/help/overview.html
@@ -32,7 +32,8 @@
 <h2>Shortcut Keys</h2>
 <p>Ctrl+Home: Positions the image at the top left corner. </p>
 <p>Ctrl+End: Positions the image at the bottom right corner. </p>
-<p>Ctrl+0: Centers the image..</p>
+<p>Ctrl+0: Centers the image.</p>
+<p>Left, Right, Down, Up: Positions the image one step over in the indicated direction. </p>
 <h2>Menus</h2>
 <h3>File Menu </h3>
 <h4>Open Image</h4>
